# MSFinalProject

./: .gitignore  .gitmodules  CMakeLists.txt  MainProject.sublime-project  conf.csv  graph.snap  new_ids.txt  run.sh  simHelinger.csv
Evaluation/: directedModularity.cpp
datasetRefine/: refinePapersById.cpp
main/: SymSnap.cpp  SymSnap.h  base.cpp  csv.cpp  csv.h  stdafx.cpp  stdafx.h  testgraph.cpp  testgraph.vcxproj
